--- a/partials/pag-error404/header.htm
+++ b/partials/pag-error404/header.htm
@@ -2,11 +2,11 @@
 <div class="lt-row row">
   <div class="lt-col col s12">
     <div class="lt-parallax-header parallax-container" style="height: 150px;">
-      <div class="lt-parallax parallax"><img src="{{ 'assets/img/pages/contact/header/img-01.jpg'|theme }}" alt="image"></div>  
+      <div class="lt-parallax parallax"><img src="{{ 'assets/img/pages/contact/header/img-01.jpg'|theme }}" alt="image"></div>
       <div class="lt-parallax-content">
         <div class="valign-wrapper" style="height: 200px;">
           <div class="valign">
-            <h2 class="lt-title">Post de autocuidado</h2>
+            <h2 class="lt-title">Error</h2>
           </div>
         </div>
       </div>
