--- a/partials/pag-todas/navegacion.htm
+++ b/partials/pag-todas/navegacion.htm
@@ -21,7 +21,7 @@
         <ul class="right hide-on-med-and-down">
           <li class="{% if this.page.id == 'inicio' %}active{% endif %}"><a href="{{ 'inicio'|page }}">Inicio</a></li>
           <li><a class="dropdown-button" href="#" data-activates="drop-cuidadores">Cuidadores<i class="material-icons right">arrow_drop_down</i></a></li>
-          <li class="{% if this.page.id == 'cuidado-pacientes' %}active{% endif %}"><a href="{{ 'cuidado-pacientes'|page }}">Cuidados a Pacientes</a></li>
+          <li class="{% if this.page.id == 'cuidadopacientes' %}active{% endif %}"><a href="{{ 'cuidadopacientes'|page }}">Cuidados a Pacientes</a></li>
           
           <li class="{% if this.page.id == 'faq' %}active{% endif %}"><a href="{{ 'faq'|page }}">Preguntas Frecuentes</a></li>
         </ul>
