--- a/layouts/defecto.htm
+++ b/layouts/defecto.htm
@@ -31,6 +31,8 @@ description = "Plantilla Capse"
 
     <link href="{{ ['assets/scss/style.scss']|theme }}" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href"/themes/anguro-capse/assets/css/videoyoutube.css" media="screen" />
+
     {% partial "_addons/css" %}
 
     {% styles %}
