--- a/partials/pag-todas/navegacion.htm
+++ b/partials/pag-todas/navegacion.htm
@@ -6,11 +6,13 @@
     <li><a href="#!">Autocuidados</a></li>
     <li><a href="#!">Eventos</a></li>
     <li class="divider"></li>
-    <li><a href="#!">Salir</a></li>
-    
+    <li>
+      <a class="btn-flat lt-btn-menu pull-left" href="{{ 'cuidador_cuenta'|page }}"><i class="material-icons">settings</i></a>
+      <a class="btn-flat lt-btn-menu pull-right" href="#!" data-request="onLogout" data-request-data="redirect: '/'" data-attach-loading><i class="material-icons">exit_to_app</i> </a>
+    </li>        
     {% else %}
-    <li><a href="#login-modal" class="lt-modal-trigger modal-trigger">Iniciar Sesi&oacute;n</a></li>
-    <li><a href="{{ 'cuidador_registro'|page }}" class="lt-modal-trigger modal-trigger">Registrarse</a></li>    
+    <li><a href="{{ 'cuidador_cuenta'|page }}#iniciarSesion">Iniciar Sesi&oacute;n</a></li>
+    <li><a href="{{ 'cuidador_cuenta'|page }}#registro">Registrarse</a></li>    
     {% endif %}
   </ul>
   <nav class="lt-no-background">
@@ -20,22 +22,32 @@
         <a href="#" data-activates="mobile-menu" class="lt-mobile-toggle button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li class="{% if this.page.id == 'inicio' %}active{% endif %}"><a href="{{ 'inicio'|page }}">Inicio</a></li>
-          <li><a class="dropdown-button" href="#" data-activates="drop-cuidadores">Cuidadores<i class="material-icons right">arrow_drop_down</i></a></li>
           <li class="{% if this.page.id == 'cuidadopacientes' %}active{% endif %}"><a href="{{ 'cuidadopacientes'|page }}">Cuidados a Pacientes</a></li>
-          
           <li class="{% if this.page.id == 'faq' %}active{% endif %}"><a href="{{ 'faq'|page }}">Preguntas Frecuentes</a></li>
+
+          <!-- agregar imagen y nombre de usuario -->
+          <li><a class="dropdown-button" href="#" data-activates="drop-cuidadores">Cuidadores<i class="material-icons right">arrow_drop_down</i></a></li>
+
         </ul>
         <ul class="side-nav" id="mobile-menu">
           <li><i class="material-icons">view_list</i>Menu</li>
-          <li class="divider"></li>
-          <li class="{% if this.page.id == 'inicio' %}active{% endif %}"><a href="{{ 'inicio'|page }}">Inicio</a></li>
           {% if user %}
+          <!-- Agregar imagen y datos del usuario -->
+
+          <li class="divider"></li>
+          <li>
+            <a class="btn-flat lt-btn-menu pull-left" href="{{ 'cuidador_cuenta'|page }}"><i class="material-icons">settings</i></a>
+            <a class="btn-flat lt-btn-menu pull-right" href="#!" data-request="onLogout" data-request-data="redirect: '/'" data-attach-loading><i class="material-icons">exit_to_app</i> </a>
+          </li>  
+          <li class="divider"></li>
           <li><a href="#!">Autocuidados</a></li>
           <li><a href="#!">Eventos</a></li>
           {% else %}
-          <li><a href="#!">Registrarse</a></li>
-          <li><a href="#login-modal">Iniciar Sesi&oacute;n</a></li>
+            <li><a href="{{ 'cuidador_cuenta'|page }}#iniciarSesion">Iniciar Sesi&oacute;n</a></li>
+            <li><a href="{{ 'cuidador_cuenta'|page }}#registro">Registrarse</a></li>
           {% endif %}
+          <li class="divider"></li>
+          <li class="{% if this.page.id == 'inicio' %}active{% endif %}"><a href="{{ 'inicio'|page }}">Inicio</a></li>          
           <li class="{% if this.page.id == 'cuidado-pacientes' %}active{% endif %}"><a href="{{ 'cuidado-pacientes'|page }}">Cuidados a Pacientes</a></li>
           <li class="{% if this.page.id == 'faq' %}active{% endif %}"><a href="{{ 'faq'|page }}">Preguntas Frecuentes</a></li>
         </ul>
