Actualizado con incrustación de componentes 6 Marzo

--- a/partials/pag-todas/pie.htm
+++ b/partials/pag-todas/pie.htm
@@ -1,6 +1,9 @@
+[patrocinadores]
+noPatrocinadoresMessage = "Ningun socio encontrado"
+==
 <!-- pie de pagina -->
 <div class="lt-row row">
-  <div class="lt-col col m5 s12">
-    <div class="flow-text">[IMAGENES DE PATROCINADORES]</div>
+  <div class="lt-col col s12">
+    {% component "patrocinadores" %}
   </div>
 </div>
