--- a/layouts/defecto.htm
+++ b/layouts/defecto.htm
@@ -1,4 +1,6 @@
 description = "Plantilla Capse"
+[session]
+security = "all"
 ==
 <!DOCTYPE html>
 <html lang="es">
@@ -9,7 +11,7 @@ description = "Plantilla Capse"
     <meta name="description" content="{{ this.page.meta_description|default(this.theme.description) }}">
     <meta name="keywords" content="{{ this.theme.keywords }}">
     <meta name="author" content="{{ this.theme.website_author }}">
-    <title>{{ this.theme.website_name }} - {{ this.page.meta_title|default(this.page.title) }}</title>
+    <title>{{ this.page.meta_title|default(this.page.title) }} - {{ this.theme.website_name }}</title>
     <link rel="canonical" href="{{ this.theme.website_url }}" />
     <link rel="icon" type="image/png" href="{{ 'assets/img/icon.png'|theme }}" />
 
