Afinación de Detalles 8 Marzo

--- a/assets/scss/theme/_custom.scss
+++ b/assets/scss/theme/_custom.scss
@@ -34,3 +34,8 @@ nav .user-info {
 .divider {
     clear: both;
 }
+@media #{$small-and-down}{
+    nav .brand-logo{
+        font-size: 1.5rem;
+    }
+}
