--- a/partials/pag-todas/navegacion.htm
+++ b/partials/pag-todas/navegacion.htm
@@ -18,7 +18,7 @@
   <nav class="lt-no-background">
     <div class="nav-wrapper">
       <div class="lt-container container">
-        <a href="{{ 'home'|page }}" class="brand-logo white-text">CAPSE</a>
+          <a href="{{ 'home'|page }}" class="brand-logo white-text">CUIDADORES UNIDOS <span class="hide-on-small-only">|</span></a>
         <a href="#" data-activates="mobile-menu" class="lt-mobile-toggle button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li class="{% if this.page.id == 'inicio' %}active{% endif %}"><a href="{{ 'inicio'|page }}">Inicio</a></li>
