--- a/partials/pag-todas/pie.htm
+++ b/partials/pag-todas/pie.htm
@@ -1,9 +1,9 @@
-[patrocinadores]
-noPatrocinadoresMessage = "Ningun socio encontrado"
+[socios]
+noSociosMessage = "Ningun socio encontrado"
 ==
 <!-- pie de pagina -->
 <div class="lt-row row">
   <div class="lt-col col s12">
-    {% component "patrocinadores" %}
+    {% component "socios" %}
   </div>
 </div>
